--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"build":"juice ./src/templates/master.html ./dist/master.html"
+    "build": "juice ./src/templates/master.html ./dist/master.html"
   },
   "author": "Anthony Capobianchi",
   "license": "ISC",
   "dependencies": {
     "juice": "^11.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^5.0.0"
   }
 }
