Added minification to the css before it gets inlined to the dist

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "del": "^7.1.0",
-    "gulp": "^5.0.0"
+    "gulp": "^5.0.0",
+    "gulp-clean-css": "^4.3.0"
   },
-	"type": "module"
+  "type": "module"
 }
