Added a find/replace task for changing the font weights in the dist folders

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "del": "^7.1.0",
     "gulp": "^5.0.0",
-    "gulp-clean-css": "^4.3.0"
+    "gulp-clean-css": "^4.3.0",
+    "gulp-replace": "^1.1.4"
   },
   "type": "module"
 }
